--- a/src/i18n/locales/cn/translation.json
+++ b/src/i18n/locales/cn/translation.json
@@ -1,8 +1,8 @@
 {
   "tab": {
-    "posts": "生活",
-    "snippets": "专业"
- 
+    "posts": "文章",
+    "snippets": "代码片段",
+    "projects": "项目"
   },
   "intro": {
     "title": "👋 你好，我是Harrie",
